--- a/Aula_BootStrap/index.html
+++ b/Aula_BootStrap/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class = "navbar navbar-expand-lg navbar-light">
             <a class = "navbar-brand" href = "#">
-                <img src = "img/avanade.png" tag = "logo avanade" width="100" height = "80">
+                <img src = "img/avanade.png" alt = "logo avanade" width="100" height = "80">
             </a>
             <div class = "collapse navbar-collapse">
                 <ul class = "navbar-nav"> 
@@ -28,7 +28,7 @@
         <section id = "Quem-somos">
             <div class = "container-fluid quem-somos text-center margin">
                 <h3 class = "margin">Quem Somos</h3>
-                <img src = "img/team-work.png" tag = "trabalho em equipe"  class = "rounded-circle" width="300" height="300">
+                <img src = "img/team-work.png" alt = "trabalho em equipe"  class = "rounded-circle" width="300" height="300">
                 <h3>Somos um time comprometido com os resultados</h3>
             </div>
         </section>
@@ -38,13 +38,13 @@
                 <div class = "container">
                     <div class = "row">
                         <div class = "col-lg-4">
-                            <img src = "img/accenture.PNG" tag = "logo accenture" width = "100%">
+                            <img src = "img/accenture.PNG" alt = "logo accenture" width = "100%">
                         </div>
                         <div class = "col-lg-4">
-                            <img src = "img/logo-white.png" tag = "logo digital innovation one" width = "100%">
+                            <img src = "img/logo-white.png" alt = "logo digital innovation one" width = "100%">
                         </div>
                         <div class = "col-lg-4">
-                            <img src =  "img/microsoft.png" tag = "logo microsoft" width = "100%">
+                            <img src =  "img/microsoft.png" alt = "logo microsoft" width = "100%">
                         </div>
                     </div>
                 </div>
@@ -57,11 +57,11 @@
                     <div class = "row">
                         <div class = "col-lg-6">
                             <p>Na Avanade, nossa visão é ser o líder em inovação digital, gerando resultados a nossos clientes e aos clientes deles por meio do potencial de nossa equipe e do ecossistema Microsoft.</p>
-                            <img src = "img/celular.png" tag = "imagem" width = "100%">
+                            <img src = "img/celular.png" alt = "imagem" width = "100%">
                         </div>
                         <div class = "col-lg-6">
                             <p>Ajudamos a criar experiências atrativas para os seus clientes e funcionários.Reduzimos os custos, aumentamos a produtividade, permitimos a colaboração, aprimoramos a agilidade. </p>
-                            <img src = "img/tablet.png" tag = "tablet" width = "100%" height="57%">
+                            <img src = "img/tablet.png" alt = "tablet" width = "100%" height="57%">
                         </div>
                     </div>
                 </div>
